--- a/nodejs-e90-display/web.config
+++ b/nodejs-e90-display/web.config
@@ -14,6 +14,13 @@
         <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
             <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
     </handlers>
+
+    <defaultDocument enabled="true">
+      <files>
+        <add value="index.js" />
+      </files>
+    </defaultDocument>
+
     <rewrite>
       <rules>
         <!-- Do not interfere with requests for node-inspector debugging -->
