--- a/nodejs-e90-display/web.config
+++ b/nodejs-e90-display/web.config
@@ -11,16 +11,9 @@
     <!-- Visit http://blogs.msdn.com/b/windowsazure/archive/2013/11/14/introduction-to-websockets-on-windows-azure-web-sites.aspx for more information on WebSocket support -->
     <webSocket enabled="false" />
     <handlers>
-        <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
-            <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
+      <!-- Indicates that the server.js file is a node.js site to be handled by the iisnode module -->
+      <add name="iisnode" path="index.js" verb="*" modules="iisnode"/>
     </handlers>
-
-    <defaultDocument enabled="true">
-      <files>
-        <add value="index.js" />
-      </files>
-    </defaultDocument>
-
     <rewrite>
       <rules>
         <!-- Do not interfere with requests for node-inspector debugging -->
