--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "dotenv": "^5.0.1",
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "gulp": "^4.0.2",
+        "nodemon": "^2.0.2"
     }
 }
